--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "sitiotoyota3",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "directories": {
     "doc": "docs"
@@ -11,5 +10,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
